--- a/responivewebsite.html
+++ b/responivewebsite.html
@@ -45,14 +45,14 @@ Step 4: Again Login to https://nextstep.tcs.com using your Reference ID and Pass
 <label><input type="radio" name="qualification" value="M.tech"/>M.tech</label><br>
 </p>
 <p>
-<b>Cources completed:</b>
+<b>Courses completed:</b>
 <ul style="list-style-type:none;">
-<li><input type="checkbox" name="cource" value="c" />c</li>
-<li><input type="checkbox" name="cource" value="python" />python</li>
-<li><input type="checkbox" name="cource" value="c++" />c++</li>
-<li><input type="checkbox" name="cource" value="html" />html</li>
-<li><input type="checkbox" name="cource" value="css" />css</li>
-<li><input type="checkbox" name="cource" value="java" />java</li>
+<li><input type="checkbox" name="course" value="c" />c</li>
+<li><input type="checkbox" name="course" value="python" />python</li>
+<li><input type="checkbox" name="course" value="c++" />c++</li>
+<li><input type="checkbox" name="course" value="html" />html</li>
+<li><input type="checkbox" name="course" value="css" />css</li>
+<li><input type="checkbox" name="course" value="java" />java</li>
 </ul>
 </p>
 <b><label>X CGPA:<br><input type="CGPA"/></label><br><br>
@@ -60,6 +60,5 @@ Step 4: Again Login to https://nextstep.tcs.com using your Reference ID and Pass
 <label>Upload Resume:<br><input type="file"/></label><br><br>
 <label>Upload Photo:<br><input type="file"/></label><br><br>
 <button type="SUBMIT">SUBMIT</button></b>
-</form>
 </body>
 </html>
